Fixed title clear issue with navigation overflow
Post navigation will no longer flow into post title space.

--- a/ThemeBase/css/style.css
+++ b/ThemeBase/css/style.css
@@ -176,6 +176,8 @@ span.caption {
 	float: left;
 }
 
+.post-title { clear: both; } /* stops post nav overflow from interfering with title */
+
 
 /* = [4c] links = */
 a:hover {
